Revert "testing cm3 support"
This reverts commit 9c8f6f7caeb821dc7bee6d7a2c22519d32e80b5b.

--- a/arch/arm64/boot/dts/rockchip/rk3566-rk817-eink-w6.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3566-rk817-eink-w6.dts
@@ -265,7 +265,7 @@
 	status = "okay";
 
 	vdd_cpu: tcs4525@1c {
-		compatible = "tcs,tcs4525";
+		compatible = "tcs,tcs452x";
 		reg = <0x1c>;
 		vin-supply = <&vccsys>;
 		regulator-compatible = "fan53555-reg";
