--- a/arch/arm64/configs/rockchip_linux_defconfig
+++ b/arch/arm64/configs/rockchip_linux_defconfig
@@ -830,6 +830,7 @@ CONFIG_VIDEO_GC8034=y
 CONFIG_VIDEO_IMX219=y
 CONFIG_VIDEO_IMX415=y
 CONFIG_VIDEO_ARDUCAM_PIVARIETY=y
+CONFIG_VIDEO_IMX708=y
 CONFIG_VIDEO_IMX477=y
 CONFIG_VIDEO_IMX464=y
 CONFIG_VIDEO_OS04A10=y
