--- a/arch/arm64/boot/dts/rockchip/rk3566-radxa-cm3-rpi-cm4-io.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3566-radxa-cm3-rpi-cm4-io.dts
@@ -8,6 +8,7 @@
 /dts-v1/;
 
 #include "rk3566-radxa-rock-3-compute-module.dtsi"
+#include <dt-bindings/display/rockchip_vop.h>
 
 / {
 	model = "Radxa CM3 RPI CM4 IO";
@@ -68,6 +69,19 @@
 	status = "okay";
 	connect = <&vp0_out_hdmi>;
 };
+
+&vp0 {
+	cursor-win-id = <ROCKCHIP_VOP2_CLUSTER0>;
+};
+								  
+					   
+						
+   
+
+&vp1 {
+	cursor-win-id = <ROCKCHIP_VOP2_CLUSTER1>;
+								 
+					   
 
 &gpio_leds {
 	pi-led-green {
