--- a/arch/arm64/boot/dts/rockchip/overlay/Makefile
+++ b/arch/arm64/boot/dts/rockchip/overlay/Makefile
@@ -54,6 +54,8 @@ dtbo-$(CONFIG_ARCH_ROCKCHIP) += \
 	rock-5a-i2c5-rtc-hym8563.dtbo \
 	rock-5a-radxa-camera-4k.dtbo \
 	rock-5a-arducam-pivariety.dtbo \
+	rock-5a-arducam-imx708.dtbo \
+	rock-5a-arducam-imx708-hdr.dtbo \
 	rock-5a-arducam-imx477.dtbo \
 	rock-5a-radxa-display-8hd.dtbo \
 	rock-5a-radxa-display-10hd.dtbo \
