add cm3 overlays

--- a/arch/arm64/boot/dts/rockchip/overlay/Makefile
+++ b/arch/arm64/boot/dts/rockchip/overlay/Makefile
@@ -65,6 +65,31 @@ dtbo-$(CONFIG_ARCH_ROCKCHIP) += \
 	rock-5b-rpi-camera-v2.dtbo \
 	rock-5b-radxa-camera-4k.dtbo \
 	rock-5b-sata.dtbo \
+	radxa-cm3s-io-csi1-rpi-camera-v2.dtbo \
+	radxa-cm3s-io-csi1-okdo-5mp-camera.dtbo \
+	radxa-cm3s-io-csi0-rpi-camera-v2.dtbo \
+	radxa-cm3s-io-csi0-okdo-5mp-camera.dtbo \
+	radxa-cm3-sodimm-io-raspberrypi-7inch-touchscreen.dtbo \
+	radxa-cm3-sodimm-io-radxa-display-8hd.dtbo \
+	radxa-cm3-rpi-cm4-io-disable-emc2301.dtbo \
+	radxa-cm3-rpi-cm4-camera-v2-imx219-cam1.dtbo \
+	radxa-cm3-rpi-cm4-camera-v2-imx219-cam0.dtbo \
+	radxa-cm3-rpi-cm4-7inch-touchscreen-disp1.dtbo \
+	radxa-cm3-rpi-cm4-7inch-touchscreen-disp0.dtbo \
+	radxa-cm3-raspcm4io-pcie2x1.dtbo \
+	radxa-cm3-io-sharp-lq133t1jw01-without-hdmi.dtbo \
+	radxa-cm3-io-sata2.dtbo \
+	radxa-cm3-io-sata1.dtbo \
+	radxa-cm3-io-radxa-10p1inch-display.dtbo \
+	radxa-cm3-io-pcie2x1.dtbo \
+	radxa-cm3-io-okdo-5mp-camera-cam2.dtbo \
+	radxa-cm3-io-okdo-5mp-camera-cam1.dtbo \
+	radxa-cm3-io-i2c0-hym8563.dtbo \
+	radxa-cm3-io-hd101boe9365-display.dtbo \
+	radxa-cm3-io-dual-cameras-gc2053.dtbo \
+	radxa-cm3-io-dual-cameras-gc2053-gc2093.dtbo \
+	radxa-cm3-io-camera-v2-imx219-cam2.dtbo \
+	radxa-cm3-io-camera-v2-imx219-cam1.dtbo \	
 
 dtbotxt-$(CONFIG_ARCH_ROCKCHIP) += \
 	README.rockchip-overlays
