--- a/arch/arm64/boot/dts/rockchip/overlay/Makefile
+++ b/arch/arm64/boot/dts/rockchip/overlay/Makefile
@@ -89,7 +89,10 @@ dtbo-$(CONFIG_ARCH_ROCKCHIP) += \
 	radxa-cm3-io-dual-cameras-gc2053.dtbo \
 	radxa-cm3-io-dual-cameras-gc2053-gc2093.dtbo \
 	radxa-cm3-io-camera-v2-imx219-cam2.dtbo \
-	radxa-cm3-io-camera-v2-imx219-cam1.dtbo \	
+	radxa-cm3-io-camera-v2-imx219-cam1.dtbo \
+
+dtbotxt-$(CONFIG_ARCH_ROCKCHIP) += \
+	README.rockchip-overlays
 
 targets += $(dtbo-y) $(dtbotxt-y)
 
