--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -24,3 +24,13 @@ jobs:
           target: linux
           edition: rk356x
           revision: ${{ env.revision }}
+      - name: debug
+        run: |
+          ls -a
+      - name: Upload to Github
+        uses: actions/upload-artifact@v2
+        with:
+          name: "rock5-kernel-openhd"
+          path: |
+            *.deb
+            RK_Kernel/*.deb
