--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -26,7 +26,7 @@ jobs:
           revision: ${{ env.revision }}
       - name: debug
         run: |
-          ls -a
+          tree
       - name: Upload to Github
         uses: actions/upload-artifact@v2
         with:
