--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -25,6 +25,7 @@ jobs:
       
       - name: build kernel
         run: |
+          git clone https://github.com/openhd/bsp
           cd bsp
           ls -a
           cd bsp
