--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -27,10 +27,8 @@ jobs:
         run: |
           git clone https://github.com/openhd/bsp
           cd bsp
-          ls -a
-          cd bsp
-          ls -a
-          bash bsp --long-version -r 1 linux rk356x
+          chmod +x bsp
+          ./bsp --long-version -r 1 linux rk356x
 
       - name: Upload to Github
         uses: actions/upload-artifact@v2
