--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -28,6 +28,7 @@ jobs:
           git clone https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
+          chmod +x scripts/basic/fixdep
           ./bsp --long-version -r 1 linux rk356x
 
       - name: Upload to Github
