--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -28,9 +28,7 @@ jobs:
           git clone https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
-          echo "bsp--------------------------------------------------------------"
-          ls -a ../scripts/basic/
-          chmod +x scripts/basic/fixdep
+          chmod +x scripts/basic/fixdep.c
           ./bsp --long-version -r 1 linux rk356x |& tee buildlog.log
 
       - name: Upload to Github
