--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -28,7 +28,7 @@ jobs:
           git clone https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
-          ./bsp --long-version -r 1 linux rk356x |& tee buildlog.log
+          ./bsp --long-version --no-prepare-source -r 16 linux rk356x |& tee buildlog.log
 
       - name: Upload to Github
         uses: actions/upload-artifact@v2
