--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -69,7 +69,7 @@ jobs:
           file: "/home/runner/work/RK_Kernel/RK_Kernel/linux-header*.deb"
           
       - name: Push libc
-        id: push_headers
+        id: push_libc
         uses: cloudsmith-io/action@master
         with:
           api-key: ${{ secrets.CLOUDSMITH_API_KEY }}
