--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -52,7 +52,7 @@ jobs:
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
-          file: "/home/runner/work/RK_Kernel/RK_Kernel/linux-image*.deb"
+          file: "bsp/linux-image-5.10.160-16*.deb"
 
       - name: Push header
         id: push_headers
@@ -66,7 +66,7 @@ jobs:
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
-          file: "/home/runner/work/RK_Kernel/RK_Kernel/linux-header*.deb"
+          file: "bsp/linux-headers-5.10.160-16*.deb"
           
       - name: Push libc
         id: push_libc
@@ -80,4 +80,4 @@ jobs:
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
-          file: "/home/runner/work/RK_Kernel/RK_Kernel/linux-libc-dev*.deb"
+          file: "bsp/linux-libc-dev-5.10.160-16-rk356x_5.10.160-16*.deb"
