--- a/arch/arm64/boot/dts/rockchip/Makefile
+++ b/arch/arm64/boot/dts/rockchip/Makefile
@@ -118,7 +118,16 @@ dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3566-evb3-ddr3-v10-linux.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3566-evb5-lp4x-v10.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3566-radxa-cm3-io.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3566-radxa-cm3-rpi-cm4-io.dtb
-dtb-$(CONFIG_ARCH_ROCKCHIP) += core3566-rk3566.dtb
+dtb-$(CONFIG_ARCH_ROCKCHIP) += core3566-luckfox-rk3566.dtsi
+dtb-$(CONFIG_ARCH_ROCKCHIP) += core3566-mipi-camera-imx219-cam0.dtsi
+dtb-$(CONFIG_ARCH_ROCKCHIP) += core3566-mipi-camera-imx219-cam1.dtsi
+dtb-$(CONFIG_ARCH_ROCKCHIP) += core3566-mipi-lp4x-v1-linux.dts
+dtb-$(CONFIG_ARCH_ROCKCHIP) += core3566-mipi-touchscreen-800-480.dtsi
+dtb-$(CONFIG_ARCH_ROCKCHIP) += core3566-rk3566.dtsi
+dtb-$(CONFIG_ARCH_ROCKCHIP) += core3566-rk3568-dram-default-timing.dtsi
+dtb-$(CONFIG_ARCH_ROCKCHIP) += core3566-rk3568-pinctrl.dtsi
+dtb-$(CONFIG_ARCH_ROCKCHIP) += core3566-rk3568.dtsi
+dtb-$(CONFIG_ARCH_ROCKCHIP) += core3566-rockchip-pinconf.dtsi
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3566-rk817-eink.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3566-rk817-eink-w6.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += rk3566-rk817-eink-w103.dtb
