--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -25,10 +25,10 @@ jobs:
       
       - name: build kernel
         run: |
-          git clone https://github.com/openhd/bsp
+          git clone -b rkr4.1-core3566 https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
-          ./bsp --long-version -r 16 linux rk356x |& tee buildlog.log
+          ./bsp --long-version -r 1337 linux rk356x |& tee buildlog.log
 
       - name: little hack for github uploads
         run: |
@@ -53,7 +53,7 @@ jobs:
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
-          file: "linux-image-5.10.160-16*.deb"
+          file: "linux-image-5.10.160-1337*.deb"
 
       - name: Push header
         id: push_headers
@@ -67,7 +67,7 @@ jobs:
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
-          file: "linux-headers-5.10.160-16*.deb"
+          file: "linux-headers-5.10.160-1337*.deb"
           
       - name: Push libc
         id: push_libc
@@ -81,4 +81,4 @@ jobs:
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
-          file: "linux-libc-dev-5.10.160-16-rk356x*.deb"
+          file: "linux-libc-dev-5.10.160-1337*.deb"
