--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -25,7 +25,7 @@ jobs:
       
       - name: build kernel
         run: |
-          git clone -b ${{ github.ref_name }} https://github.com/openhd/bsp
+          git clone https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
           ./bsp --long-version -r 20 linux rk356x |& tee buildlog.log
