--- a/arch/arm64/boot/dts/rockchip/rk3568.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3568.dtsi
@@ -91,6 +91,14 @@
 			cpu-idle-states = <&CPU_SLEEP>;
 			#cooling-cells = <2>;
 			dynamic-power-coefficient = <187>;
+			power-model {
+				compatible = "simple-power-model";
+				leakage-range= <10 40>;
+				ls = <(-9196) 6360 0>;
+				static-coefficient = <100000>;
+				ts = <83822 206397 (-4300) 71>;
+				thermal-zone = "soc-thermal";
+			};
 		};
 
 		cpu1: cpu@100 {
@@ -135,20 +143,20 @@
 			};
 		};
 	};
-
+	
 	cpu0_opp_table: cpu0-opp-table {
 		compatible = "operating-points-v2";
 		opp-shared;
 
 		mbist-vmin = <825000 900000 950000>;
-		nvmem-cells = <&cpu_leakage>, <&core_pvtm>, <&mbist_vmin>, <&cpu_opp_info>;
-		nvmem-cell-names = "leakage", "pvtm", "mbist-vmin", "opp-info";
-		rockchip,max-volt = <1150000>;
+		nvmem-cells = <&cpu_leakage>, <&core_pvtm>, <&mbist_vmin>;
+		nvmem-cell-names = "leakage", "pvtm", "mbist-vmin";
+								
 		rockchip,pvtm-voltage-sel = <
-			0        84000   0
-			84001    87000   1
-			87001    91000   2
-			91001    100000  3
+			0        82000   0
+			82001    93000   1
+					 
+			93001    100000  2
 		>;
 		rockchip,pvtm-freq = <408000>;
 		rockchip,pvtm-volt = <900000>;
@@ -163,74 +171,75 @@
 		rockchip,low-temp = <0>;
 		rockchip,low-temp-adjust-volt = <
 			/* MHz    MHz    uV */
-			   0      1992   75000
+			   0      1608   75000
 		>;
-
+		rockchip,avs-scale = <26>;
 		opp-408000000 {
 			opp-hz = /bits/ 64 <408000000>;
-			opp-microvolt = <850000 850000 1150000>;
-			opp-microvolt-L3 = <900000 900000 1150000>;
+			opp-microvolt = <825000 825000 1150000>;
+											  
 			clock-latency-ns = <40000>;
 		};
 		opp-600000000 {
 			opp-hz = /bits/ 64 <600000000>;
-			opp-microvolt = <850000 850000 1150000>;
-			opp-microvolt-L3 = <900000 900000 1150000>;
+			opp-microvolt = <825000 825000 1150000>;
+											  
 			clock-latency-ns = <40000>;
 		};
 		opp-816000000 {
 			opp-hz = /bits/ 64 <816000000>;
-			opp-microvolt = <850000 850000 1150000>;
-			opp-microvolt-L3 = <900000 900000 1150000>;
+			opp-microvolt = <825000 825000 1150000>;
+											  
 			clock-latency-ns = <40000>;
 			opp-suspend;
 		};
 		opp-1104000000 {
 			opp-hz = /bits/ 64 <1104000000>;
-			opp-microvolt = <900000 900000 1150000>;
-			opp-microvolt-L0 = <900000 900000 1150000>;
-			opp-microvolt-L1 = <850000 850000 1150000>;
-			opp-microvolt-L2 = <850000 850000 1150000>;
-			opp-microvolt-L3 = <900000 900000 1150000>;
+			opp-microvolt = <825000 825000 1150000>;
+											  
+											  
+											  
+											  
 			clock-latency-ns = <40000>;
 		};
 		opp-1416000000 {
 			opp-hz = /bits/ 64 <1416000000>;
-			opp-microvolt = <1025000 1025000 1150000>;
-			opp-microvolt-L0 = <1025000 1025000 1150000>;
-			opp-microvolt-L1 = <975000 975000 1150000>;
-			opp-microvolt-L2 = <950000 950000 1150000>;
-			opp-microvolt-L3 = <1000000 1000000 1150000>;
+			opp-microvolt = <925000 925000 1150000>;
+												
+											  
+											  
+												
 			clock-latency-ns = <40000>;
 		};
 		opp-1608000000 {
 			opp-hz = /bits/ 64 <1608000000>;
-			opp-microvolt = <1100000 1100000 1150000>;
-			opp-microvolt-L0 = <1100000 1100000 1150000>;
-			opp-microvolt-L1 = <1050000 1050000 1150000>;
-			opp-microvolt-L2 = <1025000 1025000 1150000>;
-			opp-microvolt-L3 = <1000000 1000000 1150000>;
+			opp-microvolt = <1000000 1000000 1000000>;
+												
+												
+												
+												
 			clock-latency-ns = <40000>;
 		};
 		opp-1800000000 {
 			opp-hz = /bits/ 64 <1800000000>;
-			opp-microvolt = <1150000 1150000 1150000>;
-			opp-microvolt-L0 = <1150000 1150000 1150000>;
-			opp-microvolt-L1 = <1100000 1100000 1150000>;
-			opp-microvolt-L2 = <1075000 1075000 1150000>;
-			opp-microvolt-L3 = <1050000 1050000 1150000>;
-			clock-latency-ns = <40000>;
+											 
+												
+												
+												
+			opp-microvolt = <1050000 1050000 1050000>;
+			clock-latency-ns = <400000>;
 		};
 		opp-1992000000 {
 			opp-hz = /bits/ 64 <1992000000>;
 			opp-microvolt = <1150000 1150000 1150000>;
-			opp-microvolt-L0 = <1150000 1150000 1150000>;
-			opp-microvolt-L1 = <1150000 1150000 1150000>;
-			opp-microvolt-L2 = <1125000 1125000 1150000>;
-			opp-microvolt-L3 = <1100000 1100000 1150000>;
-			clock-latency-ns = <40000>;
+												
+												
+												
+												
+			clock-latency-ns = <400000>;
 		};
-	};
+
+
 
 	arm-pmu {
 		compatible = "arm,cortex-a55-pmu", "arm,armv8-pmuv3";
@@ -243,8 +252,8 @@
 
 	cpuinfo {
 		compatible = "rockchip,cpuinfo";
-		nvmem-cells = <&otp_id>, <&otp_cpu_version>, <&cpu_code>, <&performance>;
-		nvmem-cell-names = "id", "cpu-version", "cpu-code", "performance";
+		nvmem-cells = <&otp_id>, <&otp_cpu_version>, <&cpu_code>;
+		nvmem-cell-names = "id", "cpu-version", "cpu-code";
 	};
 
 	display_subsystem: display-subsystem {
@@ -2354,7 +2363,7 @@
 		rockchip,low-temp = <0>;
 		rockchip,low-temp-adjust-volt = <
 			/* MHz    MHz    uV */
-			   0      1560   75000
+			   0      1560   25000
 		>;
 		rockchip,leakage-voltage-sel = <
 			1   80    0
@@ -2407,10 +2416,10 @@
 		phys = <&combphy2_psq PHY_TYPE_PCIE>;
 		phy-names = "pcie-phy";
 		power-domains = <&power RK3568_PD_PIPE>;
-		ranges = <0x00000800 0x0 0xf4000000 0x0 0xf4000000 0x0 0x100000
-			  0x81000000 0x0 0xf4100000 0x0 0xf4100000 0x0 0x100000
-			  0x82000000 0x0 0xf4200000 0x0 0xf4200000 0x0 0x1e00000
-			  0xc3000000 0x3 0x00000000 0x3 0x00000000 0x0 0x40000000>;
+		ranges = <0x00000800 0x0 0x00000000 0x3 0x00000000 0x0 0x800000
+			  0x81000000 0x0 0x00800000 0x3 0x00800000 0x0 0x100000
+			  0x83000000 0x0 0x00900000 0x3 0x00900000 0x0 0x3f700000>;
+													
 		reg = <0x3 0xc0000000 0x0 0x400000>,
 		      <0x0 0xfe260000 0x0 0x10000>;
 		reg-names = "pcie-dbi", "pcie-apb";
@@ -2460,10 +2469,10 @@
 		phys = <&pcie30phy>;
 		phy-names = "pcie-phy";
 		power-domains = <&power RK3568_PD_PIPE>;
-		ranges = <0x00000800 0x0 0xf2000000 0x0 0xf2000000 0x0 0x100000
-			  0x81000000 0x0 0xf2100000 0x0 0xf2100000 0x0 0x100000
-			  0x82000000 0x0 0xf2200000 0x0 0xf2200000 0x0 0x1e00000
-			  0xc3000000 0x3 0x40000000 0x3 0x40000000 0x0 0x40000000>;
+		ranges = <0x00000800 0x0 0x40000000 0x3 0x40000000 0x0 0x800000
+			  0x81000000 0x0 0x40800000 0x3 0x40800000 0x0 0x100000
+			  0x83000000 0x0 0x40900000 0x3 0x40900000 0x0 0x3f700000>;
+															  
 		reg = <0x3 0xc0400000 0x0 0x400000>,
 		      <0x0 0xfe270000 0x0 0x10000>;
 		reg-names = "pcie-dbi", "pcie-apb";
@@ -2514,10 +2523,10 @@
 		phys = <&pcie30phy>;
 		phy-names = "pcie-phy";
 		power-domains = <&power RK3568_PD_PIPE>;
-		ranges = <0x00000800 0x0 0xf0000000 0x0 0xf0000000 0x0 0x100000
-			  0x81000000 0x0 0xf0100000 0x0 0xf0100000 0x0 0x100000
-			  0x82000000 0x0 0xf0200000 0x0 0xf0200000 0x0 0x1e00000
-			  0xc3000000 0x3 0x80000000 0x3 0x80000000 0x0 0x40000000>;
+		ranges = <0x00000800 0x0 0x80000000 0x3 0x80000000 0x0 0x800000
+			  0x81000000 0x0 0x80800000 0x3 0x80800000 0x0 0x100000
+			  0x83000000 0x0 0x80900000 0x3 0x80900000 0x0 0x3f700000>;
+															  
 		reg = <0x3 0xc0800000 0x0 0x400000>,
 		      <0x0 0xfe280000 0x0 0x10000>;
 		reg-names = "pcie-dbi", "pcie-apb";
@@ -2553,12 +2562,12 @@
 			 <&cru SCLK_GMAC0_RX_TX>, <&cru CLK_MAC0_REFOUT>,
 			 <&cru ACLK_GMAC0>, <&cru PCLK_GMAC0>,
 			 <&cru SCLK_GMAC0_RX_TX>, <&cru CLK_GMAC0_PTP_REF>,
-			 <&cru PCLK_XPCS>, <&cru CLK_XPCS_EEE>;
+			 <&cru PCLK_XPCS>;
 		clock-names = "stmmaceth", "mac_clk_rx",
 			      "mac_clk_tx", "clk_mac_refout",
 			      "aclk_mac", "pclk_mac",
 			      "clk_mac_speed", "ptp_ref",
-			      "pclk_xpcs", "clk_xpcs_eee";
+			      "pclk_xpcs";
 		resets = <&cru SRST_A_GMAC0>;
 		reset-names = "stmmaceth";
 
@@ -2637,20 +2646,20 @@
 	};
 
 	sdhci: sdhci@fe310000 {
-		compatible = "rockchip,rk3568-dwcmshc", "rockchip,dwcmshc-sdhci";
+		compatible = "rockchip,dwcmshc-sdhci", "snps,dwcmshc-sdhci";
 		reg = <0x0 0xfe310000 0x0 0x10000>;
 		interrupts = <GIC_SPI 19 IRQ_TYPE_LEVEL_HIGH>;
-		assigned-clocks = <&cru BCLK_EMMC>, <&cru TCLK_EMMC>,
-				  <&cru CCLK_EMMC>;
-		assigned-clock-rates = <200000000>, <24000000>, <200000000>;
+		assigned-clocks = <&cru BCLK_EMMC>, <&cru TCLK_EMMC>;
+					   
+		assigned-clock-rates = <200000000>, <24000000>;
 		clocks = <&cru CCLK_EMMC>, <&cru HCLK_EMMC>,
 			 <&cru ACLK_EMMC>, <&cru BCLK_EMMC>,
 			 <&cru TCLK_EMMC>;
 		clock-names = "core", "bus", "axi", "block", "timer";
-		resets = <&cru SRST_C_EMMC>, <&cru SRST_H_EMMC>,
-			 <&cru SRST_A_EMMC>, <&cru SRST_B_EMMC>,
-			 <&cru SRST_T_EMMC>;
-		reset-names = "core", "bus", "axi", "block", "timer";
+												  
+										   
+					   
+													   
 		status = "disabled";
 	};
 
