--- a/arch/arm64/boot/dts/rockchip/rk3568.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3568.dtsi
@@ -176,26 +176,26 @@
 		rockchip,avs-scale = <26>;
 		opp-408000000 {
 			opp-hz = /bits/ 64 <408000000>;
-			opp-microvolt = <825000 825000 1150000>;
+			opp-microvolt = <800000 800000 1000000>;
 											  
 			clock-latency-ns = <40000>;
 		};
 		opp-600000000 {
 			opp-hz = /bits/ 64 <600000000>;
-			opp-microvolt = <825000 825000 1150000>;
+			opp-microvolt = <800000 800000 1000000>;
 											  
 			clock-latency-ns = <40000>;
 		};
 		opp-816000000 {
 			opp-hz = /bits/ 64 <816000000>;
-			opp-microvolt = <825000 825000 1150000>;
+			opp-microvolt = <800000 800000 1000000>;
 											  
 			clock-latency-ns = <40000>;
 			opp-suspend;
 		};
 		opp-1104000000 {
 			opp-hz = /bits/ 64 <1104000000>;
-			opp-microvolt = <825000 825000 1150000>;
+			opp-microvolt = <800000 800000 1000000>;
 											  
 											  
 											  
@@ -204,7 +204,7 @@
 		};
 		opp-1416000000 {
 			opp-hz = /bits/ 64 <1416000000>;
-			opp-microvolt = <925000 925000 1150000>;
+			opp-microvolt = <90000 900000 1000000>;
 												
 											  
 											  
@@ -213,7 +213,7 @@
 		};
 		opp-1608000000 {
 			opp-hz = /bits/ 64 <1608000000>;
-			opp-microvolt = <1000000 1000000 1000000>;
+			opp-microvolt = <900000 900000 900000>;
 												
 												
 												
@@ -226,12 +226,12 @@
 												
 												
 												
-			opp-microvolt = <1050000 1050000 1050000>;
+			opp-microvolt = <1000000 1000000 1000000>;
 			clock-latency-ns = <400000>;
 		};
 		opp-1992000000 {
 			opp-hz = /bits/ 64 <1992000000>;
-			opp-microvolt = <1150000 1150000 1150000>;
+			opp-microvolt = <1000000 1000000 1000000>;
 												
 												
 												
