--- a/arch/arm64/boot/dts/rockchip/rk3568.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3568.dtsi
@@ -195,7 +195,7 @@
 		};
 		opp-1104000000 {
 			opp-hz = /bits/ 64 <1104000000>;
-			opp-microvolt = <800000 800000 1000000>;
+			opp-microvolt = <700000 700000 900000>;
 											  
 											  
 											  
@@ -204,7 +204,7 @@
 		};
 		opp-1416000000 {
 			opp-hz = /bits/ 64 <1416000000>;
-			opp-microvolt = <90000 900000 1000000>;
+			opp-microvolt = <80000 800000 900000>;
 												
 											  
 											  
