--- a/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_openhd_crosscompile.yaml
@@ -59,7 +59,7 @@ jobs:
           command: "push"
           format: "deb"
           owner: "openhd"
-          repo: "openhd-2-3-evo"
+          repo: "dev-release"
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
@@ -73,7 +73,7 @@ jobs:
           command: "push"
           format: "deb"
           owner: "openhd"
-          repo: "openhd-2-3-evo"
+          repo: "dev-release"
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
