--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -29,7 +29,7 @@ jobs:
           git clone -b rkr4.1-core3566 https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
-          ./bsp --long-version -r 1338 linux rk356x |& tee buildlog.log
+          ./bsp --long-version -r 4242 linux rk356x |& tee buildlog.log
 
       - name: little hack for github uploads
         run: |
@@ -50,7 +50,7 @@ jobs:
           command: "push"
           format: "deb"
           owner: "openhd"
-          repo: "openhd-2-3-evo"
+          repo: "dev-release"
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
@@ -64,7 +64,7 @@ jobs:
           command: "push"
           format: "deb"
           owner: "openhd"
-          repo: "openhd-2-3-evo"
+          repo: "dev-release"
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
@@ -78,7 +78,7 @@ jobs:
           command: "push"
           format: "deb"
           owner: "openhd"
-          repo: "openhd-2-3-evo"
+          repo: "dev-release"
           distro: "debian"
           release: "bullseye"
           republish: "true" # needed ONLY if version is not changing
