--- a/arch/arm64/boot/dts/rockchip/rk3566-radxa-cm3.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3566-radxa-cm3.dtsi
@@ -57,17 +57,17 @@
 		vin-supply = <&vcc_sys>;
 	};
 
-	// gpio_leds: gpio-leds {
-	// 	compatible = "gpio-leds";
-	// 	status = "okay";
+	gpio_leds: gpio-leds {
+		compatible = "gpio-leds";
+		status = "okay";
 
-	// 	user-led {
-	// 		gpios = <&gpio0 6 GPIO_ACTIVE_HIGH>;
-	// 		linux,default-trigger = "timer";
-	// 		default-state = "on";
-	// 		pinctrl-0 = <&user_led_set>;
-	// 	};
-	// };
+		user-led {
+			gpios = <&gpio0 6 GPIO_ACTIVE_HIGH>;
+			linux,default-trigger = "timer";
+			default-state = "on";
+			pinctrl-0 = <&user_led_set>;
+		};
+	};
 
 	sdio_pwrseq: sdio-pwrseq {
         compatible = "mmc-pwrseq-simple";
@@ -93,26 +93,26 @@
 	status = "okay";
 };
 
-// &rkcif {
-// 	status = "okay";
-// };
+&rkcif {
+	status = "okay";
+};
 
-// &rkcif_mmu {
-// 	status = "okay";
-// };
+&rkcif_mmu {
+	status = "okay";
+};
 
-// &rkisp {
-// 	status = "okay";
-// };
+&rkisp {
+	status = "okay";
+};
 
-// &rkisp_mmu {
-// 	status = "okay";
-// };
+&rkisp_mmu {
+	status = "okay";
+};
 
-// &gpu {
-// 	mali-supply = <&vdd_gpu>;
-// 	status = "okay";
-// };
+&gpu {
+	mali-supply = <&vdd_gpu>;
+	status = "okay";
+};
 
 &pmu_io_domains {
 	status = "okay";
@@ -428,70 +428,70 @@
 	status = "okay";
 };
 
-// &jpegd {
-// 	status = "okay";
-// };
+&jpegd {
+	status = "okay";
+};
 
-// &jpegd_mmu {
-// 	status = "okay";
-// };
+&jpegd_mmu {
+	status = "okay";
+};
 
-// &mpp_srv {
-// 	status = "okay";
-// };
+&mpp_srv {
+	status = "okay";
+};
 
-// &rk_rga {
-// 	status = "okay";
-// };
+&rk_rga {
+	status = "okay";
+};
 
-// &rkvdec {
-// 	status = "okay";
-// };
+&rkvdec {
+	status = "okay";
+};
 
-// &rkvdec_mmu {
-// 	status = "okay";
-// };
+&rkvdec_mmu {
+	status = "okay";
+};
 
-// &rkvenc {
-// 	venc-supply = <&vdd_logic>;
-// 	status = "okay";
-// };
+&rkvenc {
+	venc-supply = <&vdd_logic>;
+	status = "okay";
+};
 
-// &rkvenc_mmu {
-// 	status = "okay";
-// };
+&rkvenc_mmu {
+	status = "okay";
+};
 
-// &bus_npu {
-// 	bus-supply = <&vdd_logic>;
-// 	pvtm-supply = <&vdd_cpu>;
-// 	status = "okay";
-// };
+&bus_npu {
+	bus-supply = <&vdd_logic>;
+	pvtm-supply = <&vdd_cpu>;
+	status = "okay";
+};
 
-// &rknpu {
-// 	memory-region = <&rknpu_reserved>;
-// 	rknpu-supply = <&vdd_gpu>;
-// 	status = "okay";
-// };
+&rknpu {
+	memory-region = <&rknpu_reserved>;
+	rknpu-supply = <&vdd_gpu>;
+	status = "okay";
+};
 
 &rknpu_mmu {
 	status = "okay";
 };
 
-// &reserved_memory {
+&reserved_memory {
 
-// 	rknpu_reserved: rknpu {
-// 		compatible = "shared-dma-pool";
-// 		inactive;
-// 		reusable;
-// 		size = <0x0 0x20000000>;
-// 		alignment = <0x0 0x1000>;
-// 	};
-// };
+	rknpu_reserved: rknpu {
+		compatible = "shared-dma-pool";
+		inactive;
+		reusable;
+		size = <0x0 0x20000000>;
+		alignment = <0x0 0x1000>;
+	};
+};
 
-// &saradc {
-// 	status = "okay";
-// 	vref-supply = <&vcc_1v8>;
-// };
+&saradc {
+	status = "okay";
+	vref-supply = <&vcc_1v8>;
+};
 
 &sdhci {
 	bus-width = <8>;
@@ -501,155 +501,155 @@
 	status = "okay";
 };
 
-// &gmac1 {
-// 	phy-mode = "rgmii";
-// 	clock_in_out = "input";
+&gmac1 {
+	phy-mode = "rgmii";
+	clock_in_out = "input";
 
-// 	snps,reset-gpio = <&gpio4 RK_PC2 GPIO_ACTIVE_LOW>;
-// 	snps,reset-active-low;
-// 	/* Reset time is 20ms, 100ms for rtl8211f */
-// 	snps,reset-delays-us = <0 20000 100000>;
+	snps,reset-gpio = <&gpio4 RK_PC2 GPIO_ACTIVE_LOW>;
+	snps,reset-active-low;
+	/* Reset time is 20ms, 100ms for rtl8211f */
+	snps,reset-delays-us = <0 20000 100000>;
 
-// 	assigned-clocks = <&cru SCLK_GMAC1_RX_TX>, <&cru SCLK_GMAC1>;
-// 	assigned-clock-parents = <&cru SCLK_GMAC1_RGMII_SPEED>, <&gmac1_clkin>;
-// 	assigned-clock-rates = <0>, <125000000>;
+	assigned-clocks = <&cru SCLK_GMAC1_RX_TX>, <&cru SCLK_GMAC1>;
+	assigned-clock-parents = <&cru SCLK_GMAC1_RGMII_SPEED>, <&gmac1_clkin>;
+	assigned-clock-rates = <0>, <125000000>;
 
-// 	pinctrl-names = "default";
-// 	pinctrl-0 = <&gmac1m0_miim
-// 			 &gmac1m0_tx_bus2
-// 			 &gmac1m0_rx_bus2
-// 			 &gmac1m0_rgmii_clk
-// 			 &gmac1m0_rgmii_bus
-// 			 &gmac1m0_clkinout>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&gmac1m0_miim
+			 &gmac1m0_tx_bus2
+			 &gmac1m0_rx_bus2
+			 &gmac1m0_rgmii_clk
+			 &gmac1m0_rgmii_bus
+			 &gmac1m0_clkinout>;
 
-// 	tx_delay = <0x46>;
-// 	rx_delay = <0x2e>;
+	tx_delay = <0x46>;
+	rx_delay = <0x2e>;
 
-// 	phy-handle = <&rgmii_phy1>;
-// 	status = "okay";
-// };
+	phy-handle = <&rgmii_phy1>;
+	status = "okay";
+};
 
-// &mdio1 {
-// 	rgmii_phy1: phy@0 {
-// 		compatible="ethernet-phy-ieee802.3-c22";
-// 		reg=<0x0>;
-// 	};
-// };
+&mdio1 {
+	rgmii_phy1: phy@0 {
+		compatible="ethernet-phy-ieee802.3-c22";
+		reg=<0x0>;
+	};
+};
 
-// &sfc {
-// 	status = "okay";
-// 	max-freq = <50000000>;
-// 	#address-cells = <1>;
-// 	#size-cells = <0>;
-// 	pinctrl-names = "default";
-// 	pinctrl-0 = <&fspi_pins>;
+&sfc {
+	status = "okay";
+	max-freq = <50000000>;
+	#address-cells = <1>;
+	#size-cells = <0>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&fspi_pins>;
 
-// 	spi_flash: spi-flash@0 {
-// 		#address-cells = <1>;
-// 		#size-cells = <0>;
-// 		compatible = "jedec,spi-nor";
-// 		reg = <0x0>;
-// 		spi-max-frequency = <50000000>;
-// 		spi-tx-bus-width = <1>;
-// 		spi-rx-bus-width = <4>;
-// 		status = "okay";
-// 	};
-// };
+	spi_flash: spi-flash@0 {
+		#address-cells = <1>;
+		#size-cells = <0>;
+		compatible = "jedec,spi-nor";
+		reg = <0x0>;
+		spi-max-frequency = <50000000>;
+		spi-tx-bus-width = <1>;
+		spi-rx-bus-width = <4>;
+		status = "okay";
+	};
+};
 
-// &rockchip_suspend {
-// 	status = "okay";
-// 	rockchip,sleep-debug-en = <1>;
-// 	rockchip,sleep-mode-config = <
-// 		(0
-// 		| RKPM_SLP_CENTER_OFF
-// 		| RKPM_SLP_HW_PLLS_OFF
-// 		| RKPM_SLP_PMUALIVE_32K
-// 		| RKPM_SLP_32K_PVTM
-// 		)
-// 	>;
-// 	rockchip,wakeup-config = <
-// 		(0
-// 		| RKPM_GPIO_WKUP_EN
-// 		| RKPM_USB_WKUP_EN
-// 		)
-// 	>;
-// };
+&rockchip_suspend {
+	status = "okay";
+	rockchip,sleep-debug-en = <1>;
+	rockchip,sleep-mode-config = <
+		(0
+		| RKPM_SLP_CENTER_OFF
+		| RKPM_SLP_HW_PLLS_OFF
+		| RKPM_SLP_PMUALIVE_32K
+		| RKPM_SLP_32K_PVTM
+		)
+	>;
+	rockchip,wakeup-config = <
+		(0
+		| RKPM_GPIO_WKUP_EN
+		| RKPM_USB_WKUP_EN
+		)
+	>;
+};
 
-// &tsadc {
-// 	status = "okay";
-// };
+&tsadc {
+	status = "okay";
+};
 
-// &u2phy0_host {
-// 	status = "okay";
-// };
+&u2phy0_host {
+	status = "okay";
+};
 
-// &u2phy0_otg {
-// 	status = "okay";
-// };
+&u2phy0_otg {
+	status = "okay";
+};
 
-// &u2phy1_host {
-// 	status = "okay";
-// };
+&u2phy1_host {
+	status = "okay";
+};
 
-// &u2phy1_otg {
-// 	status = "okay";
-// };
+&u2phy1_otg {
+	status = "okay";
+};
 
-// &usb2phy0 {
-// 	status = "okay";
-// };
+&usb2phy0 {
+	status = "okay";
+};
 
-// &usb2phy1 {
-// 	status = "okay";
-// };
+&usb2phy1 {
+	status = "okay";
+};
 
-// &usb_host0_ehci {
-// 	status = "okay";
-// };
+&usb_host0_ehci {
+	status = "okay";
+};
 
-// &usb_host0_ohci {
-// 	status = "okay";
-// };
+&usb_host0_ohci {
+	status = "okay";
+};
 
-// &usb_host1_ehci {
-// 	status = "okay";
-// };
+&usb_host1_ehci {
+	status = "okay";
+};
 
-// &usb_host1_ohci {
-// 	status = "okay";
-// };
+&usb_host1_ohci {
+	status = "okay";
+};
 
-// &usbdrd_dwc3 {
-// 	dr_mode = "otg";
-// 	extcon = <&usb2phy0>;
-// 	status = "okay";
-// };
+&usbdrd_dwc3 {
+	dr_mode = "otg";
+	extcon = <&usb2phy0>;
+	status = "okay";
+};
 
-// &usbdrd30 {
-// 	status = "okay";
-// };
+&usbdrd30 {
+	status = "okay";
+};
 
-// &usbhost_dwc3 {
-// 	status = "disabled";
-// };
+&usbhost_dwc3 {
+	status = "disabled";
+};
 
-// &usbhost30 {
-// 	status = "disabled";
-// };
+&usbhost30 {
+	status = "disabled";
+};
 
-// &combphy1_usq {
-// 	status = "disabled";
-// };
+&combphy1_usq {
+	status = "disabled";
+};
 
-// &combphy2_psq {
-// 	status = "okay";
-// };
+&combphy2_psq {
+	status = "okay";
+};
 
-// &pcie2x1 {
-//     reset-gpios = <&gpio1 RK_PB2 GPIO_ACTIVE_HIGH>;
-//     vpcie3v3-supply = <&vcc3v3_sys>;
-//     status = "okay";
-// };
+&pcie2x1 {
+    reset-gpios = <&gpio1 RK_PB2 GPIO_ACTIVE_HIGH>;
+    vpcie3v3-supply = <&vcc3v3_sys>;
+    status = "okay";
+};
 
 
 &vdpu {
@@ -698,36 +698,36 @@
 	#address-cells = <1>;
 	#size-cells = <0>;
 
-	// brcmf: wifi@0 {
-	// 	compatible = "brcm,bcm4329-fmac";
-	// 	reg = <1>;
-	// 	interrupt-parent = <&gpio2>;
-	// 	interrupts = <RK_PC1 IRQ_TYPE_LEVEL_HIGH>;
-	// 	interrupt-names = "host-wake";
-	// 	pinctrl-names = "default";
-	// 	pinctrl-0 = <&wifi_host_wake_l>;
-	// };
+	brcmf: wifi@0 {
+		compatible = "brcm,bcm4329-fmac";
+		reg = <1>;
+		interrupt-parent = <&gpio2>;
+		interrupts = <RK_PC1 IRQ_TYPE_LEVEL_HIGH>;
+		interrupt-names = "host-wake";
+		pinctrl-names = "default";
+		pinctrl-0 = <&wifi_host_wake_l>;
+	};
 };
 
-// &uart1 {
-// 	status = "okay";
-// 	pinctrl-names = "default";
-// 	pinctrl-0 = <&uart1m0_xfer &uart1m0_ctsn &uart1m0_rtsn>;
+&uart1 {
+	status = "okay";
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart1m0_xfer &uart1m0_ctsn &uart1m0_rtsn>;
 
-// 	    wireless_bluetooth: wireless-bluetooth {
-//         compatible = "bluetooth-platdata";
-//         clocks = <&rk809 1>;
-//         clock-names = "ext_clock";
-//         //wifi-bt-power-toggle;
-//         //uart_rts_gpios = <&gpio2 RK_PB1 GPIO_ACTIVE_LOW>;
-//         pinctrl-names = "default", "rts_gpio";
-//         pinctrl-0 = <&uart8m0_rtsn>;
-//         pinctrl-1 = <&uart8_gpios>;
-//         //BT,reset_gpio    = <&gpio3 RK_PA0 GPIO_ACTIVE_HIGH>;
-//         //BT,wake_gpio     = <&gpio3 RK_PA1 GPIO_ACTIVE_HIGH>;
-//         //BT,wake_host_irq = <&gpio3 RK_PA2 GPIO_ACTIVE_HIGH>;
-//         status = "okay";
-//     };
+	    wireless_bluetooth: wireless-bluetooth {
+        compatible = "bluetooth-platdata";
+        clocks = <&rk809 1>;
+        clock-names = "ext_clock";
+        //wifi-bt-power-toggle;
+        //uart_rts_gpios = <&gpio2 RK_PB1 GPIO_ACTIVE_LOW>;
+        pinctrl-names = "default", "rts_gpio";
+        pinctrl-0 = <&uart8m0_rtsn>;
+        pinctrl-1 = <&uart8_gpios>;
+        //BT,reset_gpio    = <&gpio3 RK_PA0 GPIO_ACTIVE_HIGH>;
+        //BT,wake_gpio     = <&gpio3 RK_PA1 GPIO_ACTIVE_HIGH>;
+        //BT,wake_host_irq = <&gpio3 RK_PA2 GPIO_ACTIVE_HIGH>;
+        status = "okay";
+    };
 
 &pinctrl {
 	pmic {
@@ -752,33 +752,33 @@
 		};
 	};
 
-	// leds {
-	// 	user_led_set: user-led {
-	// 		rockchip,pins = <0 RK_PA6 RK_FUNC_GPIO &pcfg_pull_none>;
-	// 	};
-	// };
+	leds {
+		user_led_set: user-led {
+			rockchip,pins = <0 RK_PA6 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+	};
 
-	// wifi {
-	// 	wifi_enable_h: wifi-enable-h {
-	// 		rockchip,pins = <2 RK_PB7 RK_FUNC_GPIO &pcfg_pull_none>;
-	// 	};
+	wifi {
+		wifi_enable_h: wifi-enable-h {
+			rockchip,pins = <2 RK_PB7 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
 
-	// 	wifi_host_wake_l: wifi-host-wake-irq {
-	// 		rockchip,pins = <2 RK_PC1 RK_FUNC_GPIO &pcfg_pull_none>;
-	// 	};
-	// };
+		wifi_host_wake_l: wifi-host-wake-irq {
+			rockchip,pins = <2 RK_PC1 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+	};
 
-	// bt {
-	// 	bt_enable_h: bt-enable-h {
-	// 		rockchip,pins = <2 RK_PC0 RK_FUNC_GPIO &pcfg_pull_none>;
-	// 	};
+	bt {
+		bt_enable_h: bt-enable-h {
+			rockchip,pins = <2 RK_PC0 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
 
-	// 	bt_host_wake_l: bt-host-wake-l {
-	// 		rockchip,pins = <2 RK_PB1 RK_FUNC_GPIO &pcfg_pull_none>;
-	// 	};
+		bt_host_wake_l: bt-host-wake-l {
+			rockchip,pins = <2 RK_PB1 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
 
-	// 	bt_wake_l: bt-wake-l {
-	// 		rockchip,pins = <2 RK_PB2 RK_FUNC_GPIO &pcfg_pull_none>;
-	// 	};
-	// };
+		bt_wake_l: bt-wake-l {
+			rockchip,pins = <2 RK_PB2 RK_FUNC_GPIO &pcfg_pull_none>;
+		};
+	};
 };
