--- a/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_Rock3_openhd_crosscompile.yaml
@@ -26,10 +26,10 @@ jobs:
       
       - name: build kernel
         run: |
-          git clone https://github.com/openhd/bsp
+          git clone -b rkr4.1-core3566 https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
-          ./bsp --long-version -r 1339 linux rk356x |& tee buildlog.log
+          ./bsp --long-version -r 4242 linux rk356x |& tee buildlog.log
 
       - name: little hack for github uploads
         run: |
