--- a/.github/workflows/build_kernel_for_CORE3566_openhd_crosscompile.yaml
+++ b/.github/workflows/build_kernel_for_CORE3566_openhd_crosscompile.yaml
@@ -29,7 +29,7 @@ jobs:
           git clone -b rkr4.1-core3566 https://github.com/openhd/bsp
           cd bsp
           chmod +x bsp
-          ./bsp --long-version -r 4242 linux rk356x |& tee buildlog.log
+          ./bsp --long-version -r core3566 linux rk356x |& tee buildlog.log
 
       - name: little hack for github uploads
         run: |
