--- a/arch/arm64/boot/dts/rockchip/rk3568-radxa-cm3i-io.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3568-radxa-cm3i-io.dts
@@ -9,8 +9,8 @@
 #include "rk3568-radxa-cm3i.dtsi"
 
 / {
-	model = "Radxa E61";
-	compatible = "radxa,e61", "radxa,cm3i", "rockchip,rk3568";
+	model = "Radxa CM3I IO Board";
+	compatible = "radxa,cm3i-io", "radxa,cm3i", "rockchip,rk3568";
 
 	fan0: pwm-fan {
 		compatible = "pwm-fan";
@@ -130,6 +130,10 @@
 	status = "okay";
 };
 
+&u2phy1_host {
+	status = "okay";
+};
+
 &usb2phy0 {
 	status = "okay";
 };
@@ -143,6 +147,14 @@
 };
 
 &usb_host0_ohci {
+	status = "okay";
+};
+
+&usb_host1_ehci {
+	status = "okay";
+};
+
+&usb_host1_ohci {
 	status = "okay";
 };
 
