--- a/arch/arm64/boot/dts/rockchip/rk3566-radxa-zero3.dts
+++ b/arch/arm64/boot/dts/rockchip/rk3566-radxa-zero3.dts
@@ -18,8 +18,8 @@
 #include "rk3566.dtsi"
 
 / {
-	model = "Radxa Zero 3W";
-	compatible = "radxa,zero-3w", "rockchip,rk3566";
+	model = "Radxa ZERO 3";
+	compatible = "radxa,zero3", "rockchip,rk3566";
 
 	fiq_debugger: fiq-debugger {
 		compatible = "rockchip,fiq-debugger";
@@ -842,6 +842,8 @@
 
 &hdmi {
 	status = "okay";
+	preset_max_hdisplay = <1920>;
+	preset_max_vdisplay = <1080>;
 };
 
 &hdmi_in_vp0 {
