Revert "enable second usb port and force 720p for now"
This reverts commit c3224fbb2bb03908b868adb39cbbde8fafb61010.

--- a/arch/arm64/boot/dts/rockchip/rk3566.dtsi
+++ b/arch/arm64/boot/dts/rockchip/rk3566.dtsi
@@ -42,7 +42,7 @@
 };
 
 &usbdrd_dwc3 {
-	phys = <&u2phy0_host>;
+	phys = <&u2phy0_otg>;
 	phy-names = "usb2-phy";
 	extcon = <&usb2phy0>;
 	maximum-speed = "high-speed";
